--- a/param/dwa_local_planner_params_servingrobot.yaml
+++ b/param/dwa_local_planner_params_servingrobot.yaml
@@ -8,11 +8,16 @@ DWAPlannerROS:
   min_vel_y: 0.0
 
 # The velocity when robot is moving in a straight line
-  max_vel_trans:  0.26
-  min_vel_trans:  0.13
+  # max_vel_trans:  0.5
+  # min_vel_trans:  0.13
+  max_vel_trans:  0.3
+  min_vel_trans:  0.05
 
-  max_vel_theta: 1.82
-  min_vel_theta: 0.9
+  # max_vel_theta: 1.82
+  # min_vel_theta: 0.9
+  max_vel_theta: 0.1
+  min_vel_theta: 0.02
+  
 
   acc_lim_x: 2.5
   acc_lim_y: 0.0
