--- a/param/dwa_local_planner_params_servingrobot.yaml
+++ b/param/dwa_local_planner_params_servingrobot.yaml
@@ -3,9 +3,14 @@ DWAPlannerROS:
 # Robot Configuration Parameters
   max_vel_x: 0.26
   min_vel_x: -0.26
+  # max_vel_x: 0
+  # min_vel_x: 0
+
 
   max_vel_y: 0.0
   min_vel_y: 0.0
+  # max_vel_y: 0.26
+  # min_vel_y: -0.26
 
 # The velocity when robot is moving in a straight line
   # max_vel_trans:  0.5
@@ -22,6 +27,7 @@ DWAPlannerROS:
   acc_lim_x: 2.5
   acc_lim_y: 0.0
   acc_lim_theta: 3.2 
+
 
 # Goal Tolerance Parametes
   xy_goal_tolerance: 0.05
@@ -41,7 +47,8 @@ DWAPlannerROS:
   occdist_scale: 0.02
   forward_point_distance: 0.325
   stop_time_buffer: 0.2
-  scaling_speed: 0.25
+  scaling_speed: 0.01
+  # scaling_speed: 0.25
   max_scaling_factor: 0.2
 
 # Oscillation Prevention Parameters
