--- a/param/base_local_planner_params.yaml
+++ b/param/base_local_planner_params.yaml
@@ -1,12 +1,16 @@
 TrajectoryPlannerROS:
 
 # Robot Configuration Parameters
-  max_vel_x: 0.18
-  min_vel_x: 0.08
+  max_vel_x: 0.06
+  min_vel_x: 0.02
 
+  # max_vel_theta:  1.0
+  # min_vel_theta: -1.1
+  # min_in_place_vel_theta: 1.0
   max_vel_theta:  1.0
   min_vel_theta: -1.0
   min_in_place_vel_theta: 1.0
+
 
   acc_lim_x: 1.0
   acc_lim_y: 0.0
